--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,16 +5,13 @@
   android:versionName="0.1"
   package="com.osesm.pifft">
   <uses-sdk
-    android:minSdkVersion="11" />
-
-  <uses-permission
-    android:name="android.permission.CAMERA" />
-  <uses-permission
-    android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    android:minSdkVersion="11"
+    android:targetSdkVersion="11" />
 
   <application
     android:icon="@drawable/icon"
-    android:label="@string/app_name">
+    android:label="@string/app_name"
+    android:hardwareAccelerated="true">
     <activity
       android:name=".Pifft"
       android:label="@string/app_name">
